--- a/8.4 Web Design Agency Project/style.css
+++ b/8.4 Web Design Agency Project/style.css
@@ -11,6 +11,7 @@ body {
 }
 
 h1 {
+  text-align: center;
   font-size: 5rem;
 }
 
@@ -19,3 +20,43 @@ footer {
   color: midnightblue;
 }
 
+span {
+  color: blue;
+}
+
+.tile-image {
+  margin-right: 20px;
+  height: 200px;
+  float: left;
+}
+
+.card {
+  width: 45%;
+}
+
+.left {
+  float: left;
+}
+
+.right {
+  float: right;
+}
+
+@media (max-width: 680px) {
+  .logo {
+    width: 11rem;
+  }
+
+  h1 {
+    font-size: 3.5rem;
+  }
+
+  .card {
+    margin-bottom: 20px;
+    width: 100%;
+  }
+
+  .tile-image {
+    width: 100%;
+  }
+}
