Clean up CSS code

--- a/8.4 Web Design Agency Project/style.css
+++ b/8.4 Web Design Agency Project/style.css
@@ -52,11 +52,14 @@ span {
   }
 
   .card {
+    display: block;
     margin-bottom: 20px;
     width: 100%;
+    text-align: justify;
   }
 
   .tile-image {
     width: 100%;
+    object-fit: cover;
   }
 }
