Remove if/else statement for clarity

--- a/Backend/4.0 EJS/views/index.ejs
+++ b/Backend/4.0 EJS/views/index.ejs
@@ -7,6 +7,6 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Hey! <%= dayType %><%= advice %></h1>
+  <h1>Hey! It's <%= dayType %>, it's <%= advice %></h1>
 </body>
 </html>
