Use variable for title

--- a/Backend/4.1 EJS Tags/views/index.ejs
+++ b/Backend/4.1 EJS Tags/views/index.ejs
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <h1>EJS Tags</h1>
+    <h1><%= title %></h1>
     <p>Current second: <%= seconds %></p>
     <% if (seconds % 2 === 0) { %>
     <ul>
