Parse json, filter object and pass to index.ejs

--- a/Backend/5.2 JSON/views/index.ejs
+++ b/Backend/5.2 JSON/views/index.ejs
@@ -17,15 +17,20 @@
   <div id="recipeContainer" class="hidden">
 
     <!-- If no recipe yet, show: -->
+    <% if (!locals.recipeObj) { %>
     <h2>Pick your favourite taco ingredient 👆</h2>
     <!-- Else, show the recipe name e.g. <h2>Recipe name</h2>-->
+    <% } else { %>
+      <h2><%= recipeObj.name %></h2>
 
     <h3>Ingredients:</h3>
     <ul id="ingredientsList">
-      <li>Protein name, protein preparation</li>
-      <li>Salsa name</li>
+      <li><%= recipeObj.ingredients.protein.name %>, <%= recipeObj.ingredients.protein.preparation %></li>
+      <li><%= recipeObj.ingredients.salsa.name %></li>
       <li>Every other topping</li>
     </ul>
+
+    <% } %>
 
 
 
