--- a/Backend/5.2 JSON/views/index.ejs
+++ b/Backend/5.2 JSON/views/index.ejs
@@ -1,40 +1,40 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Taco Recipes</title>
+    <link rel="stylesheet" type="text/css" href="/styles/main.css" />
+  </head>
 
-<head>
-  <title>Taco Recipes</title>
-  <link rel="stylesheet" type="text/css" href="/styles/main.css">
-</head>
+  <body>
+    <h1>Taco Town 🌮</h1>
 
-<body>
-  <h1>Taco Town 🌮</h1>
-
-  <form action="/recipe" method="POST" class="buttons">
-    <button type="submit" value="chicken" name="choice">🍗</button>
-    <button type="submit" value="beef" name="choice">🥩</button>
-    <button type="submit" value="fish" name="choice">🐟</button>
-  </form>
-  <div id="recipeContainer" class="hidden">
-
-    <!-- If no recipe yet, show: -->
-    <% if (!locals.recipeObj) { %>
-    <h2>Pick your favourite taco ingredient 👆</h2>
-    <!-- Else, show the recipe name e.g. <h2>Recipe name</h2>-->
-    <% } else { %>
+    <form action="/recipe" method="POST" class="buttons">
+      <button type="submit" value="chicken" name="choice">🍗</button>
+      <button type="submit" value="beef" name="choice">🥩</button>
+      <button type="submit" value="fish" name="choice">🐟</button>
+    </form>
+    <div id="recipeContainer" class="hidden">
+      <!-- If no recipe yet, show: -->
+      <% if (!locals.recipeObj) { %>
+      <h2>Pick your favourite taco ingredient 👆</h2>
+      <!-- Else, show the recipe name e.g. <h2>Recipe name</h2>-->
+      <% } else { %>
       <h2><%= recipeObj.name %></h2>
 
-    <h3>Ingredients:</h3>
-    <ul id="ingredientsList">
-      <li><%= recipeObj.ingredients.protein.name %>, <%= recipeObj.ingredients.protein.preparation %></li>
-      <li><%= recipeObj.ingredients.salsa.name %></li>
-      <li>Every other topping</li>
-    </ul>
+      <h3>Ingredients:</h3>
+      <ul id="ingredientsList">
+        <li>
+          <%= recipeObj.ingredients.protein.name %>, <%=
+          recipeObj.ingredients.protein.preparation %>
+        </li>
+        <li><%= recipeObj.ingredients.salsa.name %></li>
 
-    <% } %>
+        <% for (let item of listOfToppings) { %>
+        <li><%= item %></li>
+        <% } %>
+      </ul>
 
-
-
-  </div>
-</body>
-
+      <% } %>
+    </div>
+  </body>
 </html>
