--- a/Backend/5.3 Axios/views/index.ejs
+++ b/Backend/5.3 Axios/views/index.ejs
@@ -52,8 +52,9 @@
           </span>
         </div>
       </article>
-      <% } else { %>
+      <% } %>
 
+      <% if (locals.error) { %>
       <div id="tag-error" class="tag-error">
         <!-- Show any errors that were sent from the backend -->
         <%= error %>
