--- a/Backend/8.3 Travel Tracker/views/index.ejs
+++ b/Backend/8.3 Travel Tracker/views/index.ejs
@@ -375,7 +375,7 @@
   </h2>
   <script>
     const country_codes = "<%= countries %>".split(","); 
-    console.log(country_codes);
+    console.log("Country Code: ", country_codes);
     console.log(typeof ("<%= countries %>"))
     country_codes.forEach(code => {
       document.getElementById(code).style.fill = 'teal'
